// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpForm component Snapshots When is loading matches 1`] = `
<form>
  <formgroup-stub
    name="username"
    title="Username"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="username"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="email"
    title="Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="email"
      type="email"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="passwordConfirmation"
    title="Confirm Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="passwordConfirmation"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      disabled="true"
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <progressbar-stub />
</form>
`;

exports[`SignUpForm component Snapshots When is there is a error matches 1`] = `
<form>
  <formgroup-stub
    name="username"
    title="Username"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="username"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="email"
    title="Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="email"
      type="email"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="passwordConfirmation"
    title="Confirm Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="passwordConfirmation"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <!---->
</form>
`;

exports[`SignUpForm component Snapshots matches 1`] = `
<form>
  <formgroup-stub
    name="username"
    title="Username"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="username"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="email"
    title="Email"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="email"
      type="email"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="password"
    title="Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="password"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub
    name="passwordConfirmation"
    title="Confirm Password"
  >
    <forminput-stub
      aria-invalid="false"
      aria-required="true"
      name="passwordConfirmation"
      type="password"
      value=""
    />
  </formgroup-stub>
   
  <formgroup-stub>
    <basebutton-stub
      variant="primary"
    >
      
      Sign in
    
    </basebutton-stub>
  </formgroup-stub>
   
  <!---->
</form>
`;
